// Copyright 2018 Istio Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package istio.tools.test;

option go_package = ".;generated";

import "external.proto";

// Simple case
message Simple {
    uint32 fieldA = 1;
    string fieldB = 2;
    oneof fieldC {
        string name = 3;
        uint32 number = 4;
    }
}

// Simple case with map and map field should not have MarshalJSON/UnmarshalJSON
message SimpleWithMap {
    uint32 fieldA = 1;
    string fieldB = 2;
    map<string, string> fieldC = 3;
    message Nested {
        map<string, string> nestedFieldD = 1;
    }
    Nested fieldD = 4;
}

// verify no MarshalJSON/UnmarshalJSON functions are created for referenced map
message ReferencedMap {
    string fieldA = 1;
    SimpleWithMap.Nested fieldB = 2;
}

// verify no MarshalJSON/UnmarshalJSON functions are created for imported map
message ImportedReference {
    uint32 fieldA = 1;
    ExternalSimple fieldB = 2;
}